examples/errors/destructure_duplicate_binding.vut
let user = { name: "Vut" }
let { name, name } = user
